# peano-player

./: .gitignore  LICENSE  README.md  bandit_train.py  conftest.py  eval_by_difficulty.py  eval_by_difficulty.sh  experimental_runs.sh  gen.py  make_results_table.py  models.py  peano_dataset.jsonl  peano_dataset.lean  plot_convergence.py  plot_difficulty_breakdown.py  plot_tactic_failure_by_difficulty.py  ppo_baseline_train.py  proof_length_by_difficulty.py  pyproject.toml  requirements.txt  test_bandit.py
experiments/: eval_by_difficulty.sh  experimental_runs.sh
results/: bandit_cost_seed0.json  bandit_cost_seed1.json  bandit_cost_seed2.json  bandit_cost_seed3.json  bandit_cost_seed4.json  bandit_sparse_seed0.json  bandit_sparse_seed1.json  bandit_sparse_seed2.json  bandit_sparse_seed3.json  bandit_sparse_seed4.json  mdp_cost_seed0.json  mdp_cost_seed1.json  mdp_cost_seed2.json  mdp_cost_seed3.json  mdp_cost_seed4.json  mdp_sparse_seed0.json  mdp_sparse_seed1.json  mdp_sparse_seed2.json  mdp_sparse_seed3.json  mdp_sparse_seed4.json
scripts/eval/: eval_by_difficulty.py  make_results_table.py  proof_length_by_difficulty.py
scripts/plot/: plot_difficulty_breakdown.py  plot_tactic_failure_by_difficulty.py
scripts/train/: bandit_train.py  ppo_baseline_train.py
src/peano_player/: __init__.py  gen.py  models.py
tests/: test_bandit.py
